--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -2,12 +2,13 @@
   "name": "@aegix/gateway",
   "version": "1.1.0",
   "private": true,
+  "type": "module",
   "description": "Aegix x402 Payment Gateway Service",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
-    "build": "tsc",
+    "build": "node build.cjs",
     "start": "node dist/index.js",
     "lint": "eslint src/",
     "clean": "rm -rf dist node_modules",
